--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     
     <header>
         <div class="logo">LOGO</div>
+        <nav>
+            <li>Home</li>
+            <li>About</li>
+            <li>contact</li>
+        </nav>
     </header>
 
 </body>
