--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
     
     <header>
         <div class="logo">LOGO</div>
+
+
+
         <nav>
+
+         <ul>
             <li>Home</li>
+            <li>Contact</li>
             <li>About</li>
-            <li>contact</li>
+        </ul>
         </nav>
+
+
+
+
+
+        
     </header>
 
 </body>
