--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
     <header>
         <div class="logo">LOGO</div>
 
-
-
         <nav>
 
          <ul>
             <li>Home</li>
             <li>Contact</li>
             <li>About</li>
+            <li><span>X</span></li>
         </ul>
         </nav>
-
-
-
 
 
         
